# ClaudeCode-TDD-Template

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  main.py  pyproject.toml
 external-resources/: ClaudeCodeBestPractices.md  FastAPIテスト戦略.md  Streamlit-CSS-document.md  requirements-sample.md  test-example.py  異常系テスト戦略.md
.claude/: settings.json  settings.local.json
.claude/agents/: azure-infra-expert.md  fastapi-python-expert.md
.claude/agents/matsuoken-style-subagents/: azure-speech-expert.md  fastapi-python-expert.md  llm-rag-expert.md  quality-check-expert.md  streamlit-python-expert.md
.claude/agents/subagent-writer/: writing-green-subagent.md  writing-red-subagent.md  writing-tdd-skill.md
.claude/agents/tdd/: 0spec.md
.claude/agents/tdd-style-subagents/: tdd-implementer-green.md  tdd-refactorer-blue.md  tdd-test-writer-red.md  tdd-test-writer.md
.claude/commands/: subagent-streamlit.md
.claude/commands/matsuoken-style-commands/: subagent-azure-infra.md  subagent-azure-speech.md  subagent-fastapi.md  subagent-llm-rag.md
.claude/skills/tdd/: SKILL.md
.claude/skills/tdd-integration/: skill.md
.github/agents/: TDD-blue.agent.md  TDD-green.agent.md  TDD-red.agent.md
.github/instructions/: testing.instructions.md
docs/: README.md  docs-tests-src対応表.md  python-helper-for-tdd.md  task-list.md  test-list.md
documents/: file-structure.md  ocr-output.md  proto.md  requirements-prototype.md  requirements.md
documents/tasks/: code-example.md  fileArch.md  proto-list.md  proto-task-list.md
documents/tasks/frontend/: ui-ux.md  (+1 more)
src/backend/: main.py
tests/: __init__.py
tests/backend/: conftest.py
tests/frontend/: __init__.py  conftest.py  helpers.py
(+10 files in other folders)
