[project]
name = "cosmo-ir-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.52.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[tool.uv]
# Use newer pyarrow to avoid build issues on macOS
override-dependencies = ["pyarrow>=17.0.0"]

[tool.pyright]
typeCheckingMode = "basic"
reportMissingImports = false
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
