[project]
name = "cosmo-ir-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-projects>=1.0.0",
    "azure-cognitiveservices-speech>=1.47.0",
    "azure-identity>=1.25.1",
    "ipywidgets>=8.1.8",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
]

[dependency-groups]
dev = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[tool.uv]
# Use newer pyarrow to avoid build issues on macOS
override-dependencies = ["pyarrow>=17.0.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.pyright]
typeCheckingMode = "basic"
reportMissingImports = false
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"


[tool.ruff]
target-version = "py312"
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "SIM", "C4", "PIE", "PERF"]
extend-select = ["B006"]
extend-safe-fixes = ["B006"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
